[package]
name = "sort-and-chunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.8"
las = { version = "0.8.4", features = ["laz-parallel"] }
# If you have a dataset with null gps_time values, you'll need
# a more recent version.
# las = { path="../las-rs", features = ["laz-parallel"] }
ndarray = { version = "0.15.6", features = ["rayon"] }
